Revision history for {{$dist->name}}

{{$NEXT}}

0.07      2015-02-16 18:17:42 -0500
  - Do a compile/link (but not run) test at configure time

0.06      2015-02-16 09:42:03 -0500
  - initial version