@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Add dist_dir method that just croaks (compat with Alien::FFI)
 
 0.07      2015-02-16 18:17:42 -0500
   - Do a compile/link (but not run) test at configure time
